// Copyright 2024 Eryx <evorui at gmail dot com>, All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package lynkapi;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/lynkdb/lynkapi/go/lynkapi;lynkapi";

// import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";

import "lynkapi/type.proto";
import "lynkapi/data.proto";

message ServiceMethod {
  string name = 1;
  TypeSpec request_spec = 4;
  TypeSpec response_spec = 6;
}

message ServiceInstance {
  string name = 1;
  repeated ServiceMethod methods = 9;
}

message ApiListRequest {}

message ApiListResponse {
  string kind = 1;
  lynkapi.ServiceStatus status = 2;
  repeated ServiceInstance services = 3;  // `x_attrs:"rows"`
}

message DataProjectRequest {}

message DataProjectResponse {
  string kind = 1;
  lynkapi.ServiceStatus status = 2;
  repeated DataInstance instances = 3;  // `x_attrs:"rows"`
}

message AuthRequest {
  string login_token = 1;
}

message AuthResponse {
  string access_token = 1;
}

message Request {
  string service_name = 1;
  string method_name = 2;
  google.protobuf.Struct data = 8;
  string error = 10;
}

message Response {
  string kind = 1;
  lynkapi.ServiceStatus status = 2;
  google.protobuf.Struct data = 8;
}

service LynkService {
  rpc ApiList(ApiListRequest) returns (ApiListResponse) {}
  rpc Auth(AuthRequest) returns (AuthResponse) {}
  rpc Exec(Request) returns (Response) {}
  rpc DataProject(DataProjectRequest) returns (DataProjectResponse) {}
  rpc DataQuery(lynkapi.DataQuery) returns (lynkapi.DataResult) {}
  rpc DataUpsert(lynkapi.DataInsert) returns (lynkapi.DataResult) {}
  rpc DataIgsert(lynkapi.DataInsert) returns (lynkapi.DataResult) {}
}
